<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="org.xs.headunitlauncher.main.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_homeFragment_to_usbListFragment"
            app:destination="@id/usbListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_networkListFragment"
            app:destination="@id/networkListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_appLauncherListFragment"
            app:destination="@id/appLauncherListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="org.xs.headunitlauncher.main.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_settingsFragment_to_keymapFragment"
            app:destination="@id/keymapFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_aboutFragment"
            app:destination="@id/aboutFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_autoConnectFragment"
            app:destination="@id/autoConnectFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_darkModeFragment"
            app:destination="@id/darkModeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_autoStartFragment"
            app:destination="@id/autoStartFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_vehicleInfoFragment"
            app:destination="@id/vehicleInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_wirelessConnectionFragment"
            app:destination="@id/wirelessConnectionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_micSettingsFragment"
            app:destination="@id/micSettingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/wirelessConnectionFragment"
        android:name="org.xs.headunitlauncher.main.WirelessConnectionFragment"
        android:label="@string/wireless_connection_settings" />

    <fragment
        android:id="@+id/keymapFragment"
        android:name="org.xs.headunitlauncher.main.KeymapFragment"
        android:label="@string/keymap" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.xs.headunitlauncher.main.AboutFragment"
        android:label="@string/about" />

    <fragment
        android:id="@+id/autoConnectFragment"
        android:name="org.xs.headunitlauncher.main.AutoConnectFragment"
        android:label="@string/auto_connect_settings" />

    <fragment
        android:id="@+id/darkModeFragment"
        android:name="org.xs.headunitlauncher.main.DarkModeFragment"
        android:label="@string/dark_mode_settings" />

    <fragment
        android:id="@+id/autoStartFragment"
        android:name="org.xs.headunitlauncher.main.AutoStartFragment"
        android:label="@string/auto_start_settings" />

    <fragment
        android:id="@+id/vehicleInfoFragment"
        android:name="org.xs.headunitlauncher.main.VehicleInfoFragment"
        android:label="@string/vehicle_info_settings" />

    <fragment
        android:id="@+id/usbListFragment"
        android:name="org.xs.headunitlauncher.main.UsbListFragment"
        android:label="@string/usb" />

    <fragment
        android:id="@+id/networkListFragment"
        android:name="org.xs.headunitlauncher.main.NetworkListFragment"
        android:label="@string/wifi" />

    <fragment
        android:id="@+id/micSettingsFragment"
        android:name="org.xs.headunitlauncher.main.MicSettingsFragment"
        android:label="@string/microphone_settings" />

    <fragment
        android:id="@+id/appLauncherListFragment"
        android:name="org.xs.headunitlauncher.main.AppLauncherListFragment"
        android:label="@string/apps" />

</navigation>
